# Course-Experiment-Report

1/C实验/: 实验1_CC++  开发环境及简单程序设计.doc  实验2_结构化程序设计.doc  实验3_数组-批量数据组织.doc  实验4_函数-模块化程序设计.doc  实验5_指针.doc  实验6_结构体与共用体和文件.doc  实验7_实验测验题.doc  实验八 综合实验.doc  实验报告模板.doc
1/C实验/交/: 2024-2025-1-管春老师-马星(5418122020)-高级语言程序设计-实验一实验报告.doc  2024-2025-1-管春老师-马星(5418122020)-高级语言程序设计-实验七实验报告.doc  2024-2025-1-管春老师-马星(5418122020)-高级语言程序设计-实验三实验报告.doc  2024-2025-1-管春老师-马星(5418122020)-高级语言程序设计-实验二实验报告.doc  2024-2025-1-管春老师-马星(5418122020)-高级语言程序设计-实验五实验报告.doc  2024-2025-1-管春老师-马星(5418122020)-高级语言程序设计-实验八实验报告.doc  2024-2025-1-管春老师-马星(5418122020)-高级语言程序设计-实验六实验报告.doc  2024-2025-1-管春老师-马星(5418122020)-高级语言程序设计-实验四实验报告.doc  实验报告5~8.doc
1/大学物理实验(2)/: 大学物理实验评分标准 (1).docx  大学物理实验预习报告建议（学生） (1).docx
1/大学物理实验(2)/PPT/: 液体表面张力系数2021.pptx  物理实验绪论2025.pptx  示波器的使用.ppt
1/电工实验/: 晶体管共涉及单管放大器.docx  有源二端网络等效参数的测定.docx  正弦交流稳态实验.docx  集成放大电路的基本运用.docx
1夏/: 电子电工实习报告.doc
1夏/白小明认识实习/: 2023-2024-0夏季学期认识实习任.docx  认识实习报告.doc  附件1：2023-2024-0夏季学期-.docx  附件2：2023-2024-0夏季学期-.doc
1夏/程序设计实践/: 610ZH104_程序设计课程报告模板-2024-2025-.docx
2/数值计算实验/: 实验一-拉格朗日插值法-马星-5418122020.docx  实验七-数值计算应用-马星-5418122020.docx  实验三-数值积分-马星-5418122020.docx  实验二-最小二乘法-马星-5418122020.docx  实验五-非线性方程求解-马星-5418122020.docx  实验六-常微分方程-马星-5418122020.docx  实验四-高斯消元法-马星-5418122020.docx  最后大报告-马星-5418122020.docx
2/数字逻辑实验/: 红绿黄灯十字路口.ms14
2/数字逻辑实验/实验1红绿灯/: 红绿灯仿真.ms14  红绿灯仿真.ms14 (Security copy)
2/数字逻辑实验/实验2全加器/: 全加器仿真.ms14  四选一原理.ms14
2/数字逻辑实验/实验3智力抢答器/: 智力抢答器.ms14
2夏/数据库实验/: 610ZP118数据库课程实践任务书.docx  ~$二_5418122020_马星.doc  实验五_5418122020_马星.doc  实验四_5418122020_马星.doc  报告-5418122020-马星.docx  数据库实验报告模板.doc  数据库项目实训参考题目列表-20190624.doc
2夏/数据结构/: 2022-2023-1-任燕-学生姓名（学号）-数据结构实验 (1).doc  2022-2023-1-任燕-马星（5418122020）-数据结构实验.docx  2024-2025-0-任燕老师-马星(5418122020)-数据结构课程实践任务书.docx  2024-2025-0-任燕老师-马星(5418122020)-数据结构课程实践报告.docx  实践课选题.docx  实验1 顺序表.doc  实验2 非循环单链表.docx  实验3 栈.doc  实验4 多维数组.doc  实验5 二叉树.docx  实验6 排序2.docx
3/操作系统实验/: 2024-2025-1学期-卓越221班-操作系统实验-实验任务1-马星(518122020).docx  2024-2025-1学期-卓越221班-操作系统实验-实验任务2-马星(518122020).docx  2024-2025-1学期-卓越221班-操作系统实验-实验任务3-马星(518122020).docx  2024-2025-1学期-卓越221班-操作系统实验-实验任务4-马星(518122020).docx  2024-2025-1学期-卓越221班-操作系统实验-实验任务5-马星(518122020).docx  2024-2025-1学期-卓越221班-操作系统实验-实验任务7-马星(518122020).docx  操作系统实验任务及实验报告要求.doc
3/操作系统实验/Op/: CMakeLists.txt  test.cpp
3/操作系统实验/Op/Utils/: ColorPrint.h  VectorPrint.h  VectorUtil.h
3/操作系统实验/Op/ex2/: ex2_pc.cpp  ex2_rw.cpp
3/操作系统实验/Op/ex3/: ex3_rank.cpp
3/操作系统实验/Op/ex4/: 2024-2025-1学期-卓越221班-操作系统实验-实验任务4-马星(5418122020)-代码附件.rar  PCB.h  Recorder.cpp  Recorder.h  Util.h  ex4.cpp
3/操作系统实验/Op/ex4/Controller/: FCFS.h  HRRN.h  NPP.h  NPSJF.h  PP.h  PSJF.h  RR.h  controller.h
3/操作系统实验/Op/ex5/: FIFO.h  LFU.h  LRU.h  LinkedList.h  PageAlgorithm.h  ex5.cpp  mathematical.h
3/操作系统实验/Op/ex6/: Ex6Util.h  FileSys.h  Folder.h  SpaceSys.cpp  SpaceSys.h  ex6.cpp
3/编译原理实验/: 2023-2024-1-廖频老师-马星学生（5418122020）-编译原理-实验报告.docx  实验6任务书.doc  编译原理-实验任务书.doc  编译原理-实验报告模板.doc
3/编译原理实验/Analysis/: CMakeLists.txt  ex5.txt  t.cpp
3/编译原理实验/Analysis/CodeHelper/: Generator.h  Header.h  Printer.cpp  Printer.h  SpecialString.cpp  SpecialString.h  Utils.cpp  Utils.h
3/编译原理实验/Analysis/Ex1/: Grammar.cpp  Grammar.h  ex1.cpp
3/编译原理实验/Analysis/Ex2/: State.h  Token.h  TokenType.h  WordFactor.cpp  WordFactor.h  ex2.cpp  g2.txt
3/编译原理实验/Analysis/Ex3/: LLFactor.h  ex3.cpp  out.txt
3/编译原理实验/Analysis/Ex4/: Recursive.h  ex4.cpp
3/编译原理实验/Analysis/Ex5/: CalAttribute.h  DfaFactor.h  ExtendGrammar.h  GrammarTreeFactor.h  I.h  Production.h  Semantic.h  SheetFactor.h  TreeNode.h  ex5.cpp  ex5Util.h  g5_semantic.txt
3/编译原理实验/Analysis/Ex6/: Recursive.h  Recursive_.h  TreeNode.h  Vn_class.h  ex6.cpp  ex6Util.cpp  ex6Util.h  g6.txt
个性选修/Python实验/: python实验1.docx  python实验2.docx  python实验3.docx  python实验模版自制.docx
个性选修/算法实验/: 2024-2025-秋-刘萍老师-马星学生（5418122020）-算法分析与设计-实验报告.docx  实验任务书.doc  实验报告模版.doc
个性选修/网络安全实验/: 2023-2024-2-xxx老师-xxx学生(学号)-网络安全概论-实验报告 - 副本.docx
(+212 files in other folders)
